--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,16 +20,16 @@ jobs:
     
     - name: Terraform Initialization
       run: terraform init
-      working-directory: ./terraform # Make sure this is the correct path
+      working-directory: C:\Users\WeLcome\terraform\myproject
 
     - name: Terraform Plan
       id: plan
       run: terraform plan
-      working-directory: ./terraform # Make sure this is the correct path
+      working-directory: C:\Users\WeLcome\terraform\myproject
     
     - name: Terraform Apply
       run: terraform apply -auto-approve
-      working-directory: ./terraform # Make sure this is the correct path
+      working-directory: C:\Users\WeLcome\terraform\myproject
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
