--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,17 @@ on:
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    environment: terraform
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
+      
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: 'us-west-2' # Specify the region you are working in
+
     
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v2
@@ -22,16 +29,12 @@ jobs:
       run: terraform init
 
     - name: Terraform Plan
-      id: plan
-      run: terraform plan
+      run: terraform plan -out=tfplan
     
     - name: Terraform Apply
       id: apply
-      run: terraform apply -auto-approve
-    - name: Deploy to ECS
-      run: |
-        aws ecs update-service --cluster ${terraform output -raw ecs_cluster_id} --service ${terraform output -raw ecs_service_name} --force-new-deployment
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: 'us-west-2' # Specify the region you are working in
+      run: terraform apply --auto-approve
+      
+    
+     
+      
