--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,9 @@ jobs:
 
     - name: set credentials
       run: |
-        echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-        echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
-        AWS_DEFAULT_REGION: 'us-west-2' 
-        export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-        export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+       echo "AWS_ACCESS_KEY_ID=***" >> $GITHUB_ENV
+       echo "AWS_SECRET_ACCESS_KEY=***" >> $GITHUB_ENV
+       echo "AWS_DEFAULT_REGION=us-west-2" >> $GITHUB_ENV
     
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v2
