--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
        echo "AWS_ACCESS_KEY_ID=***" >> $GITHUB_ENV
        echo "AWS_SECRET_ACCESS_KEY=***" >> $GITHUB_ENV
        echo "AWS_DEFAULT_REGION=us-west-2" >> $GITHUB_ENV
+       export AWS_ACCESS_KEY_ID="your-access-key-id"
+       export AWS_SECRET_ACCESS_KEY="your-secret-access-key"
+       export AWS_DEFAULT_REGION="us-west-2"
     
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v2
